2011-06-28  Ulrich Drepper  <drepper@gmail.com>

	[BZ #12935]
	* malloc/memusage.sh: Fix quoting in message.
	* debug/xtrace.sh: Likewise.

2011-06-27  Andreas Schwab  <schwab@redhat.com>

	* iconvdata/gb18030.c (BODY for TO_LOOP): Fix encoding of non-BMP
	two-byte characters.

2011-06-22  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/posix/getaddrinfo.c (gaih_inet): Fix last change.

2011-06-21  Ulrich Drepper  <drepper@gmail.com>

	[BZ #12885]
	* sysdeps/posix/getaddrinfo.c (gaih_inet): When looking up only IPv6
	addresses using gethostbyname4_r ignore IPv4 addresses.

2011-06-15  Ulrich Drepper  <drepper@gmail.com>

	* resolv/res_send.c (__libc_res_nsend): Fix typos in last patch.  We
	need to dereference resplen2.

2011-06-14  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/unix/sysv/linux/wordsize-64/dl-fxstatat64.c: New file.

2011-06-14  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/check_native.c: Include <string.h> for
	memset declaration.

2011-06-10  Andreas Schwab  <schwab@redhat.com>

	* sysdeps/posix/getaddrinfo.c (gaih_inet): Fix logic allocating
	tmpbuf.

2011-06-07  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/sparc32/dl-irel.h (elf_irela): Pass dl_hwcap to
	ifuncs.
	* sysdeps/sparc/sparc32/dl-machine.h (elf_machine_rela,
	elf_machine_lazy_rel): Likewise.
	* sysdeps/sparc/sparc64/dl-irel.h (elf_irela): Likewise.
	* sysdeps/sparc/sparc64/dl-machine.h (elf_machine_rela,
	elf_machine_lazy_rel): Likewise.
	* sysdeps/sparc/sparc64/multiarch/memcpy.S (memcpy): Fetch
	dl_hwcap via passed in argument.
	* sysdeps/sparc/sparc64/multiarch/memset.S (memset, bzero):
	Likewise.

2011-06-06  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* stdlib/longlong.h: Update from GCC.  Fix smul_ppmm for S/390.

2011-06-06  Roland McGrath  <roland@hack.frob.com>

	[BZ #12849]
	* manual/fdl-1.1.texi: New file, verbatim from:
	http://www.gnu.org/licenses/old-licenses/fdl-1.1.texi
	* manual/lgpl-2.1.texi: New file, verbatim from: